--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vuex": "^3.1.0",
     "vux": "^2.9.2",
+    "vx-easyui": "^1.1.5",
     "weui": "^1.1.3"
   },
   "devDependencies": {
